--- a/kafka_manager.yml
+++ b/kafka_manager.yml
@@ -8,4 +8,4 @@ services:
       - 9000:9000
     environment:
       KM_VERSION: 1.3.3.18
-      ZK_HOSTS: zoo1:2181,zoo2:2182,zoo3:2183
+      ZK_HOSTS: 127.0.0.1:2181
